Tag drop down improvements * text field is automatically focused * hide dropdown when text field is blurred (e.g. by clicking outside) * correct size for rows * fixed css for NEW label

--- a/kifi-backend/modules/shoebox/angular/src/detail/detail.styl
+++ b/kifi-backend/modules/shoebox/angular/src/detail/detail.styl
@@ -204,16 +204,16 @@
   .page-coll-list
     margin-top: 10px
 
-  li
+  .page-coll-list>li
     display: inline-block
+
+  li
     line-height: 24px
     vertical-align: top
 
   a[href]
     color: #fff
     vertical-align: top
-
-
 
 .page-coll
   position: relative
@@ -339,7 +339,7 @@ input.page-coll-input
 .page-coll-opts
   display: none
   position: absolute
-  width: 100%
+  width: 150px
   border: 1px solid #cdd6e0
   border-top: none
   -webkit-box-sizing: border-box
@@ -362,7 +362,6 @@ input.page-coll-input
   white-space: nowrap
   overflow: hidden
   text-overflow: ellipsis
-  width: 150px
 
 .page-coll-opt.current
   background-color: #f1f2f6
@@ -373,11 +372,11 @@ input.page-coll-input
 
 .new-label
   position: absolute
-  right: 35px
-  top: 6px
+  right: 8px
+  top: 4px
   height: 14px
   line-height: 13px
-  padding: 0 4px
+  padding: 2px 4px 0
   font-size: 9px
   font-weight: bold
   background-color: #b8c5d2
